fixed spacing problem

--- a/public/public/resources/css/style.css
+++ b/public/public/resources/css/style.css
@@ -189,7 +189,7 @@
 }
 
 .subNav ul button{
-   margin-left: 70%;
+   float:right;
 }
 
 .subNav ul li a{
